--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ h1 {
 .filter {
     width: 100%;
     padding: 12px;
+    font-size: 15px;
 }
 
 .post {
@@ -101,12 +102,13 @@ h1 {
 }
 
 @keyframes bounce {
+
     0%,
     100% {
         transform: translateY(0);
     }
+
     50% {
         transform: translateY(-10px);
     }
 }
-
